Update container height and add background photo

--- a/app/views/pets/index.erb
+++ b/app/views/pets/index.erb
@@ -25,11 +25,11 @@
 
     .container {
       max-width: 580px;
-      max-height: 920px;
+      height: 910px;
       margin-left: auto;
       margin-right: auto;
-      background: lavender;
       padding: 20px;
+      background-image: url("https://images.unsplash.com/photo-1573371082124-0df7aff70f27?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80");
     }
   </style>
 </head>
